--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-immutable": "^3.1.0",
+    "reselect": "^3.0.1",
     "webpack": "^2.2.1",
     "whatwg-fetch": "^2.0.2"
   }
