add collapsable artists list

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "css-loader": "^0.26.2",
-    "eslint": "^3.16.1",
+    "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
+    "eslint-plugin-react": "^7.2.0",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "^0.13.2",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^2.5.0"
@@ -28,9 +30,11 @@
     "babel-preset-react": "^6.23.0",
     "extensible-runtime": "^4.0.1",
     "immutable": "^3.8.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
