--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "babel-preset-react": "^6.23.0",
     "extensible-runtime": "^4.0.1",
     "immutable": "^3.8.1",
+    "material-ui": "^1.0.0-beta.5",
+    "material-ui-icons": "^1.0.0-alpha.19",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
+    "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-immutable": "^3.1.0",
