--- a/package.json
+++ b/package.json
@@ -11,36 +11,39 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-extensible-destructuring": "^4.0.1",
     "babel-plugin-transform-react-jsx": "^6.23.0",
-    "babel-preset-env": "^1.2.1",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.26.2",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
-    "eslint-plugin-react": "^7.2.0",
+    "eslint-plugin-react": "^7.5.1",
+    "node-sass": "^4.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
-    "webpack-combine-loaders": "^2.0.3",
-    "webpack-dev-server": "^2.5.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "extensible-runtime": "^4.0.1",
-    "immutable": "^3.8.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "immutable": "^3.8.2",
+    "material-ui": "^1.0.0-beta.25",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.3",
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-immutable": "^3.1.0",
     "reselect": "^3.0.1",
-    "webpack": "^2.2.1",
     "whatwg-fetch": "^2.0.2"
   }
 }
